# Loc-Gallery

./: .gitignore  CHANGELOG.md  PRD.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  restart.py  tailwind.config.js
.cursor/rules/: release.mdc
config/: settings.example.json
scripts/: build-css.bat  build_preview_pages.py  capture_screenshots.py  generate_preview_assets.py  remux_mp4.py  service.py
src/avv_gallery/: __init__.py  __main__.py  category_store.py  config.py  favorite_store.py  file_ops.py  file_stability.py  history_store.py  hls_manager.py  library_context.py  library_store.py  media_probe.py  process_util.py  scanner.py  server.py  settings_store.py  thumb_manager.py
src/loc_gallery/: __init__.py  __main__.py  category_store.py  config.py  favorite_store.py  file_ops.py  file_stability.py  format_index.py  history_store.py  hls_manager.py  library_context.py  library_store.py  media_probe.py  process_util.py  range_stream.py  remux_core.py  remux_manager.py  scanner.py  server.py  settings_store.py  thumb_manager.py  title.py
static/: app.js  index.html  style.css  tailwind.css
static/demo/: index.html
static/preview/: batch.html  favorites.html  gallery.html  history.html  player.html  settings.html
tests/: test_auto_new_video.py  test_disguised_pipe.py  test_file_stability.py  test_multi_library.py
