[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loc-gallery"
version = "2.0.0"
description = "本地视频画廊 Web 服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
